tests/golden/error/import_not_found/main.tg
// Test: importing a non-existent item produces an error.

pub mod mymod;

use mymod::NonExistent;

fn main() -> Nat { 0 }
